# finite_automaton_ocaml

./: README.md  dune-project  finite_automaton.opam
lib/: Finite_automaton.ml  Finite_automaton.mli  dune
test/: Finite_automaton.ml  dune
